fix(logs): keep runs of whitespace in pod log lines (#23)
* fix(logs): keep runs of whitespace in pod log lines

send() stripped the RFC3339 prefix k8s injects by splitting the whole line on \s+ and
rejoining with single spaces, which rewrote the message itself: any run of spaces the
command emitted collapsed to one. Column-aligned output, df, ls -l and indented stack
traces all lost their shape.

Split on the first whitespace run only and keep the remainder verbatim.

Closes #20

* refactor(logs): read the split parts through a List

No behavior change. Same split("\\s+", 2), read-only access, so the
fixed-size Arrays.asList view is enough.